Vercel API ayarları düzeltildi

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
   "functions": {
-    "api/listings-cached.js": {
-      "maxDuration": 30
-    },
-    "api/cron-update.js": {
+    "api/*.js": {
       "maxDuration": 30
     }
   },
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    }
+  ],
   "crons": [
     {
       "path": "/api/cron-update",
