Günlük güncelleme sistemi - Günde 1 kez (gece 3'te)

--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
   ],
   "crons": [
     {
-      "path": "/api/cron-update",
+      "path": "/api/daily-update",
       "schedule": "0 3 * * *"
     }
   ]
