--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,8 @@
 {
-  "functions": {
-    "api/*.js": {
-      "maxDuration": 30
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
   "crons": [
     {
-      "path": "/api/daily-update",
-      "schedule": "0 3 * * *"
+      "path": "/api/ingest-daily",
+      "schedule": "0 0 * * *"
     }
   ]
 }
