--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "teppek",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "vite build",
     "preview": "vite preview",
     "vercel-dev": "vercel dev",
