--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,20 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
+  "rewrites": [
+    {
+      "source": "/((?!api/).*)",
+      "destination": "/index.html"
+    }
+  ],
   "crons": [
     {
       "path": "/api/daily-refresh",
       "schedule": "0 6 * * *"
+    },
+    {
+      "path": "/api/generate-map-data",
+      "schedule": "0 7 * * *"
     }
   ],
   "headers": [
