--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -48,6 +48,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@squoosh/lib": "^0.3.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
@@ -55,6 +56,7 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "terser": "^5.43.1",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
