--- a/vercel.json
+++ b/vercel.json
@@ -33,15 +33,36 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
+        },
+        {
+          "key": "CDN-Cache-Control",
+          "value": "max-age=31536000"
         }
       ]
     },
     {
-      "source": "/(.*)\\.(.+)",
+      "source": "/(.*)\\.(js|css|woff2|woff|svg|png|jpg|jpeg|webp|ico)",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=2592000"
+          "value": "public, max-age=31536000, immutable"
+        },
+        {
+          "key": "CDN-Cache-Control",
+          "value": "max-age=31536000"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)\\.(json|geojson)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, stale-while-revalidate=300"
+        },
+        {
+          "key": "CDN-Cache-Control",
+          "value": "max-age=3600, stale-while-revalidate=300"
         }
       ]
     },
@@ -51,6 +72,10 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=300, stale-while-revalidate=60"
+        },
+        {
+          "key": "CDN-Cache-Control",
+          "value": "max-age=300, stale-while-revalidate=60"
         }
       ]
     },
